2014-03-02 John Wu <John dot Wu at ACM dot org>
	* example/tiapi.c:476 logical error, "nv=n;" should have been
	"nv=n+n;"

2014-02-28 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.h:781 nbits should have been active.nbits

2014-02-26 John Wu <John dot Wu at ACM dot org>
	* bitvector.cpp:602 ns should be nb - this causes bad bug in the
	indexes

2014-02-25 Justin Swanhart <greenlion at gmail dot com>
	* src/tafel.cpp: patch writeData to correctly print the number of
	rows handles
	* src/ibis.cpp: change reorder function to walk through all
	subdirectories

2014-02-24 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: prevent column::append to work with index only
	column, in copy constructor, copy index as well as data values
	* examples/tiapi.c: move the code that makes a3 index only in
	queryarray2 to after the doubling of data

2014-02-22 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: update bord::column::append to handle column type
	BIT following the new storage scheme

2014-02-21 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp:19568 "cols[i] == 0" should be "cols[i] != 0"
	* src/bord.cpp: change back the representation of BIT to separate
	the content of buffer from mask_ -- to address the problem of a BIT

2014-02-20 John Wu <John dot Wu at ACM dot org>
	* src/iapi.cpp: modify functions that frees an array to reduce the
	size of the global std::vector used to keep track of all arrays

2014-02-17 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: update to work with type BIT in the constructors
	of ibis::bord::column

2014-02-10 John Wu <John dot Wu at ACM dot org>
	* src/table.h, src/column.cpp: remove the unused global variable
	TYPECODE (avoid the need to update it for the addition of BIT
	type)
	* src/bitvector.h, src/bitvector64.h: add function appendByte
	* src/bord.cpp: change ibis::bord::column to use mask_ for columns
	with 0/1 values (i.e., bit values)
	* src/iapi.h, src/iapi.cpp: add function fastbit_iapi_extend_array
